# rust-lorawan

device/: Cargo.toml
