[package]
name = "lorawan-device"
version = "0.7.1"
authors = ["Louis Thiery <louis@helium.com>", "Ulf Lilleengen <lulf@redhat.com>"]
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
license = "Apache-2.0"
readme = "README.md"
description = "A Rust LoRaWAN device stack implementation"

[dependencies]
lorawan = { version = "0.7.1", path = "../encoding", default-features = false }
as-slice = "0.2"
generic-array = "0.14.2"
defmt = { version = "0.3.0", optional = true }
futures = { version = "0.3.17", default-features = false, optional = true }
rand_core = { version = "0.6.2", default-features = false, optional = true }

[dependencies.heapless]
git = "https://github.com/mstump/heapless.git"
rev = "326f5b246c82ef118d1f6caa5fbbddeffab870a5"

[features]
defmt = ["dep:defmt", "lorawan/defmt"]
default = []
async = ["futures", "rand_core"]
